--- a/static/styles.css
+++ b/static/styles.css
@@ -4,13 +4,35 @@
 }
 
 
+body{
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    max-width: 100%;
+}
+
+.operationDisplay{
+    margin: 0px auto 0px;
+    padding: 5px 20px 12px;
+    width: 350px;
+    background-color: rgb(193, 193, 193);
+    border-radius: 4px;
+    font-size: 19px;
+    transition: height 0.2s ease-out;
+    height: 30px;
+}
+
+
+
 .columnContainer{
     border: black solid 8px;
     width: 350px;
     height: 450px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
     padding: 4px;
     background-color: gray;
     display: flex;
@@ -18,13 +40,15 @@
 }
 
 .display{
-    width: 90%;
-    height: 65px;
+    width: 95%;
+    height: 60px;
     border: black solid 3px;
-    margin: 14px auto;
+    margin: 14px auto 20px;
     text-align: right;
     overflow: hidden;
-    font-size: 55px;
+    padding-top: 10px;
+    font-size: 29px;
+    font-weight: 600;
     text-overflow: hidden;
 }
 
@@ -80,6 +104,6 @@
     background-color: gray;
 }
 
-.keybtn.active{
+.keybtn:hover{
     background-color: white;
 }
